--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="header">
-            <p>Header Logo</p>
+            <p><a>Header Logo</a></p>
             <ul class="link">
                 <li>header link one</li>
                 <li>header link two</li>
@@ -20,7 +20,7 @@
         <div class="heading">
             <div>
                 <h1>Becky Landing Page</h1>
-                <p>This website has some subtext that goes uner the main title. It is a smaller font and the colour is lower contrast.</p>
+                <p>This website has some subtext that goes under the main title. It is a smaller font and the colour is lower contrast.</p>
                 <button>Sign up</button>
             </div>
             <div>
@@ -28,31 +28,31 @@
             </div>
         </div>
         <div>
-            <h3>Some random information</h3>
-            <div>
+            <h3 id="info">Some random information.</h3>
+            <div class="info">
                 <div>
-                    <img src="#" alt="" height="100px" width="100px">
+                    <img src="#" alt="" height="150" width="150">
                     <p>this is some subtext under an illistration or image</p>
                 </div>
                 <div>
-                    <img src="#" alt="" height="100px" width="100px">
+                    <img src="#" alt="" height="150" width="150">
                     <p>this is some subtext under an illistration or image</p>
                 </div>
                 <div>
-                    <img src="#" alt="" height="100px" width="100px">
+                    <img src="#" alt="" height="150" width="150">
                     <p>this is some subtext under an illistration or image</p>
                 </div>
                 <div>
-                    <img src="#" alt="" height="100px" width="100px">
+                    <img src="#" alt="" height="150" width="150">
                     <p>this is some subtext under an illistration or image</p>
                 </div>
             </div>
         </div>
-        <div>
+        <div class="quote">
             <p>This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space or maybe people will acatually read it. Who knows? All i know is that it looks nice.</p>
             <h5>-Thor, Good of Thunder</h5>
         </div>
-        <div>
+        <div class="action">
             <div>
                 <h4>Call to action! Its time!</h4>
                 <p>Sign up for our product by clicking that button right over there!</p>
